tests/simple_arrays/simple_arrays.exp
Error ----------------------------------------------------------- array.js:14:34

Error: array.js:14
 14: function bar(i): string { return a[i]; }
                                      ^^^^ Cannot return `a[i]` because number [1] is incompatible with string [2].
  References:
    4:     if (i % 2 == 0) { a[i] = 0; }
                                    ^ [1]: number
   14: function bar(i): string { return a[i]; }
                        ^^^^^^ [2]: string

Error ----------------------------------------------------------- array.js:20:41

Error: array.js:20
 20: function baz(i:number): string { return a[i]; }
                                             ^^^^ Cannot return `a[i]` because number [1] is incompatible with string [2].
  References:
    4:     if (i % 2 == 0) { a[i] = 0; }
                                    ^ [1]: number
   20: function baz(i:number): string { return a[i]; }
                               ^^^^^^ [2]: string

Error ----------------------------------------------------------- array2.js:8:42

Error: array2.js:8
  8: function foo(i: number): string { return a[i]; }
                                              ^^^^ Cannot return `a[i]` because number [1] is incompatible with string [2].
  References:
    4:     if (i % 2 == 0) { a[i] = 0; }
                                    ^ [1]: number
    8: function foo(i: number): string { return a[i]; }
                                ^^^^^^ [2]: string


Found 3 errors
